<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.berta.fabio.tipee.UnevenSplitFragment"
    android:id="@+id/scrollViewS">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutMainS">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/separator_persons"
            android:id="@+id/tvSeparatorPersons"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:id="@+id/linearLayoutPersonsS">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                style="?android:borderlessButtonStyle"
                android:id="@+id/bPersonsMinusS"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/persons_hint"
                tools:text="5"
                android:id="@+id/etPersonsS"/>

            <Button
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:id="@+id/bPersonsPlusS"/>
        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/separator_country_tip"
            android:id="@+id/tvSeparatorCountryTipS"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal"
            android:id="@+id/linearLayoutCountryTipS">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spCountryS"
                android:layout_marginBottom="4dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="?android:dividerVertical"
                android:dividerPadding="8dp">

                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sbPercentageS"
                    android:layout_weight="1"
                    android:max="30"
                    android:indeterminate="false"
                    android:progress="0"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    tools:text="14%"
                    android:id="@+id/tvResultS"
                    android:gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:id="@+id/linearLayoutSeparatorBillTipTotal">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_bill_amount"
                android:id="@+id/textView3"
                android:layout_weight="3"/>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_tip"
                android:id="@+id/textView4"
                android:layout_weight="3"
                />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_total"
                android:id="@+id/textView5"
                android:layout_weight="3"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llMain" >
        </LinearLayout>

    </LinearLayout>
</ScrollView>